Bug 493963 - I18N_ARGUMENT_MISSING in mail header
Summary: I18N_ARGUMENT_MISSING in mail header
Status: RESOLVED FIXED
Alias: None
Product: libkleo
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Ingo Klöcker
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-10-02 12:34 UTC by Allen Winter
Modified: 2024-10-07 14:41 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Allen Winter 2024-10-02 12:34:30 UTC
With a recent build from git master I'm seeing this in a  KMail email header (fancy style header)

"Signature created with certificate: EMAIL=<email address>(I18N_ARGUMENT_MISSING) (<id>(I18N_ARGUMENT_MISSING))
The signature is valid and the certificate's validity is fully trusted."
Comment 1 Bug Janitor Service 2024-10-02 14:21:56 UTC
A possibly relevant merge request was started @ https://invent.kde.org/pim/libkleo/-/merge_requests/146
Comment 2 Ingo Klöcker 2024-10-02 14:23:08 UTC
Workaround: Build with NDEBUG (which disables the I18N_ARGUMENT_MISSING messages).
Comment 3 Ingo Klöcker 2024-10-02 14:24:39 UTC
I meant: Build ki18n with NDEBUG. (Or apply the fix from the MR.)
Comment 4 Ingo Klöcker 2024-10-02 14:31:45 UTC
Git commit c3b0dc49ff2e925a3884c6e4a9a8b577bd771633 by Ingo Klöcker, on behalf of Ingo Klöcker.
Committed on 02/10/2024 at 14:17.
Pushed by kloecker into branch 'master'.

Fix composition of localized message

M  +2    -3    src/utils/formatting.cpp

https://invent.kde.org/pim/libkleo/-/commit/c3b0dc49ff2e925a3884c6e4a9a8b577bd771633
Comment 5 Ingo Klöcker 2024-10-07 08:36:27 UTC
Git commit 0abc587f2ee4554dc0f41c409304c09549e9bebe by Ingo Klöcker, on behalf of Ingo Klöcker.
Committed on 07/10/2024 at 08:36.
Pushed by kloecker into branch 'master'.

Fix regression that user ID wasn't HTML escaped anymore

M  +1    -1    src/utils/formatting.cpp

https://invent.kde.org/pim/libkleo/-/commit/0abc587f2ee4554dc0f41c409304c09549e9bebe
Comment 6 Ingo Klöcker 2024-10-07 14:41:59 UTC
Git commit 3381140452fa86d8ce7194bce3fc842df48a06cf by Ingo Klöcker, on behalf of Ingo Klöcker.
Committed on 07/10/2024 at 14:21.
Pushed by kloecker into branch 'master'.

Add tests for Formatting::prettySignature

This should prevent future regressions without relying on tests in
mimetreeparser.

M  +211  -0    autotests/formattingtest.cpp

https://invent.kde.org/pim/libkleo/-/commit/3381140452fa86d8ce7194bce3fc842df48a06cf