Fix composition of localized message

BUG: 493963